--- a/vitrine/package.json
+++ b/vitrine/package.json
@@ -4,16 +4,19 @@
   "description": "Curso 16 horas de NodeJS na Novatec",
   "main": "app.js",
   "scripts": {
-    "start": "set NODE_ENV=development && nodemon app.js",
+    "start": "set NODE_ENV=development && nodemon bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.12.3",
     "express": "^4.12.3",
-    "grunt": "^0.4.5"
+    "method-override": "^2.3.2",
+    "mongojs": "^0.18.2"
   },
   "devDependencies": {
+    "grunt": "^0.4.5",
     "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1"
