--- a/vitrine/package.json
+++ b/vitrine/package.json
@@ -5,20 +5,27 @@
   "main": "app.js",
   "scripts": {
     "start": "set NODE_ENV=development && nodemon bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pretest": "jshint app.js controllers/ db/ routes/",
+    "test": "mocha tests/*"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^2.9.25",
     "body-parser": "^1.12.3",
+    "debug": "^2.1.3",
     "express": "^4.12.3",
     "method-override": "^2.3.2",
-    "mongojs": "^0.18.2"
+    "mongojs": "^0.18.2",
+    "swig": "^1.4.2"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-uglify": "^0.9.1",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "istanbul": "^0.3.13",
+    "mocha": "^2.2.4",
+    "supertest": "^0.15.0"
   }
 }
